# Dynamic-Array

./: .gitignore  CMakeLists.txt  TODO.txt  test.i
headers/: bytearray.h  intarray.h
include/dyarrayd/: array.h  auxiliary.h  bytearray.h  intarray.h  longarray.h  shortarray.h  uintarray.h  ulongarray.h  ushortarray.h
includes/: array.h  intarray.h  longarray.h  uintarray.h  ulongarray.h  ushortarray.h
src/: CMakeLists.txt  bytearray.c  intarray.c  longarray.c  shortarray.c  uintarray.c  ulongarray.c  ushortarray.c
tests/: CMakeLists.txt  fails_codes.h  test_append.h  test_clear.h  test_copy.h  test_delete.h  test_expand.h  test_foreach.h  test_init.h  test_map.h  test_pop.h  test_reverse.h  test_slice.h  test_swap.h  tests.c
